# bwen

./: .gitignore  CLAUDE.md  Modelfile.example  README.md  config.example.yaml  eval_prompts.example.txt  justfile  pyproject.toml
docs/: PROCESS.md
scripts/: 01_parse.py  02_filter_clean.py  03_themes.py  03b_merge.py  04_score.py  05_label.py  06_build_dataset.py  07_train.py  08_export.py  09_eval.py  10_ask.py  11_publish.py  common.py
