[project]
name = "bwen"
version = "0.1.0"
description = "Finetune a small model that writes in your voice and holds your opinions, trained only on your real tweets (no synthetic data)."
readme = "README.md"
# Pinned to 3.12: torch / unsloth do not ship wheels for 3.14 yet.
requires-python = ">=3.12,<3.13"
dependencies = [
    # Data-pipeline deps (steps 01-06). No GPU needed.
    "pyyaml>=6.0",
    "numpy>=1.26",
    "requests>=2.31",       # talk to the local Ollama HTTP API
    "scikit-learn>=1.4",    # kmeans + metrics for clustering
    "hdbscan>=0.8.33",      # density clustering for theme discovery (set themes.algorithm:
                            # kmeans in config.yaml to avoid it if the wheel won't build)
    "umap-learn>=0.5",      # nonlinear dim reduction for theme discovery (themes.reduce: umap)
    "tqdm>=4.66",
    "huggingface_hub>=0.23",  # publish the dataset + model to the Hub (step 11)
    # Training stack (steps 07-08). On the RTX 5060 Ti (Blackwell / sm_120)
    # torch must be a cu128 build — see README.
    "torch",
    "unsloth",
    "transformers>=4.44",
    "datasets>=2.20",
    "accelerate>=0.33",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
